// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/blocksEditor/blocks/image should match Display snapshot 1`] = `
<div>
  <div
    class="ImageView__container"
  >
    <div
      class="ImageView__wrapper"
    >
      <img
        alt=""
        aria-label="View image in full screen"
        class="ImageView"
        data-testid="image"
        src="test.jpg"
      />
      <div
        aria-label="View image in full screen"
        class="ImageView__overlay"
        role="button"
        tabindex="0"
      >
        <div
          class="ImageView__magnify-icon"
        >
          <i
            class="CompassIcon icon-magnify MagnifyIcon"
          />
        </div>
      </div>
    </div>
    <div
      class="ImageView__metadata"
    >
      <span
        class="ImageView__size"
      >
        161.1 KiB
      </span>
      <a
        class="ImageView__download"
        href="test.jpg"
        rel="noopener noreferrer"
        target="_blank"
      >
        Download
      </a>
    </div>
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/image should match Display snapshot with empty value 1`] = `<div />`;

exports[`components/blocksEditor/blocks/image should match Input snapshot 1`] = `
<div>
  <div>
    <img
      class="ImageView"
      src="test"
    />
    <input
      accept="image/*"
      class="Image"
      data-testid="image-input"
      type="file"
    />
  </div>
</div>
`;

exports[`components/blocksEditor/blocks/image should match Input snapshot with empty input 1`] = `
<div>
  <div>
    
    <input
      accept="image/*"
      class="Image"
      data-testid="image-input"
      type="file"
    />
  </div>
</div>
`;
